$Id: CHANGES,v 1.36 2000/01/21 10:33:40 stelian Exp $

Changes between versions 0.4b12 and 0.4b13 (released January 21, 2000)
======================================================================

1.	Small Y2K fix in the man pages :). Thanks to Bernhard Sadlowski
	<sadlowsk@Mathematik.Uni-Bielefeld.DE> for reporting the bug.

2.	Removed the requirement to build the RPM as root from the
	spec file. Thanks to Christian Weisgerber 
	<naddy@mips.rhein-neckar.de> for submitting this.

3.	Fixed a bug in dump related to the 'filetype' feature of ext2fs,
	causing dump to block when dumping really huge filesystems.
	Many thanks to Patrik Schindler <poc@pocnet.net> for 
	helping me find this bug.

4.	Fixed the treatment for an interrupt signal when dump access
	the remote tape through RSH. Thanks to Christian Weisgerber
	<naddy@mips.rhein-neckar.de> for providing the patch.

5.	Fixed a bug which was causing dump/restore to display
	garbage characters instead of the remote host name.

Changes between versions 0.4b11 and 0.4b12 (released January 8, 2000)
=====================================================================

1.	Small fix in the dump man page. Thanks to Thorsten Kukuk 
	<kukuk@suse.de> for submitting the patch.

2.	Fix for the exit code when using the size estimate option of
	dump. Thanks to Matti Taskinen <mkt@rni.helsinki.fi> for
	submitting the patch.

3.	Handle EINTR in atomical reads/writes in dump, which was causing
	dump to fail on some systems. Thanks to Eric Jergensen
	<eric@dvns.com> for reporting the bug and submitting the patch.

4.	Handle more than 16 characters for the device names in dumpdates.
	(up to 255 now). Thanks to Rainer Clasen <bj@ncc.cicely.de> for
	tracking down the problem and proposing the solution.

5.	Fixed a bug in dump which prevented the creation of the
	dumpdates file when doing a 0-level dump without already
	having a dumpdates file. Thanks to Patrik Schindler 
	<poc@pocnet.net> for reporting the bug.
