@@ -1,4 +1,14 @@
-$Id: CHANGES,v 1.36 2000/01/21 10:33:40 stelian Exp $
+$Id: CHANGES,v 1.37 2000/01/25 14:14:12 stelian Exp $
+
+Changes between versions 0.4b13 and 0.4b14 (released ????????????????)
+======================================================================
+
+1.	Fixed a bug in dump which may have caused invalid deleted 
+	directories to be dumped out if they were deleted after the
+	mapping pass. This could occure on active filesystem and lead
+	to heap corruption (causing dump malfunction in many possible ways).
+	Thanks to Jan Sanislo <oystr@cs.washington.edu> for finding this
+	bug and submitting the patch.
 
 Changes between versions 0.4b12 and 0.4b13 (released January 21, 2000)
 ======================================================================
